minio/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
spec:
  type: ClusterIP
  ports:
    - port: 9000
      name: minio
      targetPort: 9000
    - port: 9001
      name: minio-console
      targetPort: 9001
  selector:
    app: minio
