minio/minio-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-tls-ingress
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd, default-vpn-ipwhitelist@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: minio-console.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
  tls:
    - secretName: minio-console-tls
      hosts:
        - minio-console.${DOMAIN}

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-tls-ingress
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: minio.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
  tls:
    - secretName: minio-tls
      hosts:
        - minio.${DOMAIN}
